# training_alembic

./: README.md  alembic.ini  main.py  models.py  mynotes.db  pyproject.toml  seeds.py
alembic/versions/: 5f389a2c20a2_init.py
